tests/fail/inexistent_module_import.py
# 'something' could not be resolved
from something import that
